--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ink. House</title>
+    <link type="Image/x-icon" href="assets/favicon.svg" rel="icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,20 +12,23 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-flex">
-            <img src="assets/logo.svg" alt="Logo">
+        <div class="container-header header-flex">
+            <div class="logo">
+                <img src="assets/logo.svg" alt="Logo">
+            </div>
             <div class="header-links">
-                <a class="header-link" href="#works">Репродукции</a>
-                <a class="header-link" href="#">Новинки</a>
-                <a class="header-link" href="#">О нас</a>
-                <button class="header-button"></button>
+                <a class="header-link" href="#reproductions">Репродукции</a>
+                <a class="header-link" href="#news">Новинки</a>
+                <a class="header-link" href="#our-team">О нас</a>
+                <button class="header-button-mobile"><img src="assets/List.png" alt="List"></button>
+                <button class="header-button"><img src="assets/buy.svg" alt="Buy icon"></button>
             </div>
         </div>
     </header>
     <main>
         <section>
             <div class="container about">
-                <img src="assets/bird.jpg" alt="Bird" class="bbird">
+                <img src="assets/bird.svg" alt="Bird">
                 <div class="about-right">
                     <h1 class="about-title">
                         Реплики картин от <span>Ink. House</span>
@@ -37,151 +41,151 @@
                 </div>
             </div>
         </section>
-        <section id="works">
-            <div class="container">
+        <section id="reproductions">
+           <div class="container">
                 <div class="works-up">
-                    <h2 class="works-title">Репродукции</h2>
-                    <div>
-                        <button class="works-button works-button-active">Франция</button>
-                        <button class="works-button">Германия</button>
-                        <button class="works-button">Англия</button>
+                    <h2 class="works-up-title">Репродукции</h2>
+                    <div class="works-buttons">
+                        <button class="works-button-active">Франция</button>
+                        <button class="works-button works-second-button">Германия</button>
+                        <button class="works-button works-button-mobile-none">Англия</button>
                     </div>
                 </div>
-                <div class="works-down">
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
+                <div class="work-down">
+                    <div class="work-example">
+                        <img class="work-img" src="assets/cupid.svg" alt="work">
                         <p class="work-artist">Марсель Руссо</p>
                         <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
+                        <p class="work-type">Холст, масло (50х80) </p>
                         <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                        <button class="work-buy">В корзину</button>
                     </div>
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
-                        <p class="work-artist">Марсель Руссо</p>
-                        <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
-                        <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                    <div class="work-example">
+                        <img class="work-img" src="assets/lady_with_a_dog.svg" alt="work">
+                        <p class="work-artist">Анри Селин</p>
+                        <p class="work-name">Дама с собачкой</p>
+                        <p class="work-type">Акрил, бумага (50х80)  </p>
+                        <p class="work-price">16 500 руб</p>
+                        <button class="work-buy">В корзину</button>
                     </div>
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
-                        <p class="work-artist">Марсель Руссо</p>
-                        <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
-                        <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                    <div class="work-example">
+                        <img class="work-img" src="assets/procedure.svg" alt="work">
+                        <p class="work-artist">Франсуа Дюпон </p>
+                        <p class="work-name">Процедура</p>
+                        <p class="work-type">Цветная литография (40х60)  </p>
+                        <p class="work-price">20 000 руб</p>
+                        <button class="work-buy">В корзину</button>
                     </div>
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
-                        <p class="work-artist">Марсель Руссо</p>
-                        <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
-                        <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                    <div class="work-example">
+                        <img class="work-img" src="assets/rose.svg" alt="work">
+                        <p class="work-artist">Луи Детуш</p>
+                        <p class="work-name">Роза</p>
+                        <p class="work-type">Бумага, акрил (50х80)  </p>
+                        <p class="work-price">12 000 руб</p>
+                        <button class="work-buy">В корзину</button>
                     </div>
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
-                        <p class="work-artist">Марсель Руссо</p>
-                        <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
-                        <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                    <div class="work-example">
+                        <img class="work-img" src="assets/bird_meal.svg" alt="work">
+                        <p class="work-artist">Франсуа Дюпон</p>
+                        <p class="work-name">Птичья трапеза</p>
+                        <p class="work-type">Цветная литография (40х60)  </p>
+                        <p class="work-price">22 500 руб</p>
+                        <button class="work-buy">В корзину</button>
                     </div>
-                    <div class="work-item">
-                        <img class="work-img" src="assets/work.jpg" alt="first work">
-                        <p class="work-artist">Марсель Руссо</p>
-                        <p class="work-name">Охота Амура</p>
-                        <p class="work-info">Холст, масло (50х80) </p>
-                        <p class="work-price">14 500 руб</p>
-                        <button class="work-buy about-button">В корзину</button>
+                    <div class="work-example">
+                        <img class="work-img" src="assets/landscape_with_fish.svg" alt="work">
+                        <p class="work-artist">Пьер Моранж</p>
+                        <p class="work-name">Пейзаж с рыбой</p>
+                        <p class="work-type">Цветная литография (40х60)  </p>
+                        <p class="work-price">20 000 руб</p>
+                        <button class="work-buy">В корзину</button>
                     </div>
                 </div>
-            </div>
+           </div> 
         </section>
-        <section id="new-collection">
-            <div class="container">
-                <div class="new-collection-title">
-                    <img src="assets/Star 2.png" alt="star icon">
+        <section class = "new-collection" id="news">
+            <div class = 'container'>
+                <div class = "new-collection-title">
+                    <img src = "assets/star.svg" alt = "star icon">
                     <h2>Новая коллекция французских авторов</h2>
                 </div>
-                <p class="new-collection-text">
-                    Сложно сказать, почему акционеры крупнейших 
-                    компаний призывают нас к новым свершениям, 
-                    которые, в свою очередь, должны быть 
-                    заблокированы в рамках своих собственных 
-                    рациональных ограничений. 
-                </p>
-                <p class="new-collection-text">
-                    Принимая во внимание показатели успешности, 
-                    граница обучения кадров предопределяет высокую
-                    востребованность направлений прогрессивного 
-                    развития.
-                </p>
-                <button class="new-collection-button">Ознакомиться</button>
+                <div class = "new-collection-text">
+                    <p>Сложно сказать, почему акционеры крупнейших компаний призывают нас к новым свершениям, которые, в свою очередь, должны быть заблокированы в рамках своих собственных рациональных ограничений. </p>
+                    <p>Принимая во внимание показатели успешности, граница обучения кадров предопределяет высокую востребованность направлений прогрессивного развития.</p>
+                </div>
+                <button class = "new-collection-button">Ознакомиться</button>
             </div>
         </section>
-        <section id="team">
+        <section id="our-team">
             <div class="container team">
-                <img src="assets/Group 210.svg" alt="jlfdf">
-                <div class="team-info">
-                    <h2>Наша команда</h2>
-                    <p>
-                        Значимость этих проблем настолько 
-                        очевидна, что базовый вектор развития 
-                        позволяет оценить значение экспериментов, 
-                        поражающих по своей масштабности и 
-                        грандиозности. Мы вынуждены отталкиваться 
-                        от того, что консультация с широким активом.
-                    </p>
-                    <div>
-                        <img class="team-image" src="assets/Ellipse 30.png" alt="profile">
-                        <img class="team-image" src="assets/Ellipse 31.jpg" alt="profile">
-                        <img class="team-image" src="assets/Ellipse 32.jpg" alt="profile">
+                <img class="team-picture" src = "assets/hand.svg" alt = "picture">
+                <div class = "team-text">
+                    <h2 class = "works-up-title works-up-title-mobile">Наша команда</h2>
+                    <p>Значимость этих проблем настолько очевидна, что базовый вектор развития позволяет оценить значение экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того, что консультация с широким активом.</p>
+                    <div class = "team-image">
+                        <img src = "assets/ellipse_1.svg" alt = "author 1">
+                        <img src = "assets/ellipse_2.svg" alt = "author 2">
+                        <img src = "assets/ellipse_3.svg" alt = "author 3">
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-flex">
-                <div>
-                    <img class="footer-logo" src="assets/logo.svg">
-                    <div>
-                        <p class="footer-contacts">+7 (999) 543-54-54</p>
-                        <p class="footer-text">Мастерская</p>
-                    </div>
-                </div>
-            <div class="footer-info">
-                <div class="footer-links">
-                    <div class="footer-link">
-                        <h3>Репродукции</h3>
-                        <a href="#" target="_blank">Франция</a>
-                        <a href="#">Германия</a>
-                        <a href="#">Англия</a>
-                    </div>
-                    <div class="footer-link">
-                        <h3>Новинки</h3>
-                        <a href="#">2021</a>
-                        <a href="#">2020</a>
-                    </div>
-                    <div class="footer-link">
-                        <h3>О нас</h3>
-                        <a href="#">Художники</a>
-                        <a href="#">Менеджеры</a>
-                    </div>
-                </div>
-                <div>
-                        <div class="footer-socials">
-                            <a href="#"><img src="assets/Vector.svg"></a>
-                            <a href="#"><img src="assets/Vector (1).svg"></a>
-                            <a href="#"><img src="assets/Vector (2).svg"></a>
-                    </div>
-                    <p class="footer-socials-text">Ink. House ®</p>
-                    <p class="footer-socials-text">All rights reserved</p>
-                </div>
-            </div>
+   <footer>
+  <div class="container footer-flex">
+    <div class="contacts">
+      <img src="assets/logo.svg" alt="logo">
+      <div class="contacts-info">
+        <p class="contacts-phone">+7 (999) 543-54-54</p>
+        <p>Мастерская</p>
+      </div>
+    </div>
+    <!-- Для мобилы -->
+    <div class="footer-row-mobile">
+        <div>
+        <p class="contacts-phone">+7 (999) 543-54-54</p>
+        <p class="contacts-lable">Мастерская</p>
         </div>
-    </footer>
+      <div class="footer-link">
+        <h3>Репродукции</h3>
+        <a href="#">Франция</a>
+        <a href="#">Германия</a>
+        <a href="#">Англия</a>
+      </div>
+    </div>
+    <div class="footer-right">
+      <div class="footer-links">
+        <!--Скрыто на мобиле -->
+        <div class="footer-link footer-link-rep">
+          <h3>Репродукции</h3>
+          <a href="#">Франция</a>
+          <a href="#">Германия</a>
+          <a href="#">Англия</a>
+        </div>
+        <div class="footer-link">
+          <h3>Новинки</h3>
+          <a href="#">2021</a>
+          <a href="#">2020</a>
+        </div>
+        <div class="footer-link footer-link-mobile">
+          <h3>О нас</h3>
+          <a href="#">Художники</a>
+          <a href="#">Менеджеры</a>
+        </div>
+      </div>
+      <div class="footer-social-info">
+        <div class="footer-social">
+          <a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="facebook"></a>
+          <a class="social-second" href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="instagram"></a>
+          <a href="https://www.youtube.com" target="_blank"><img src="assets/youtube.svg" alt="youtube"></a>
+        </div>
+        <div class="footer-info">
+          <p>Ink. House ®</p>
+          <p>All rights reserved</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
